--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div  id="loader"></div>
 
 <section>
-    <div class="movie-container none"  id="movieContainer">
+    <div class="movie-container "  id="movieContainer">
         <div class="content">
             <h2 id="MovieName">RRR</h2>
             <p id="plot">Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eveniet unde numquam. sit.</p>
